syntax = "proto3";
package crescent.liquidfarming.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "crescent/liquidfarming/v1beta1/liquidfarming.proto";
import "crescent/liquidfarming/v1beta1/params.proto";

option go_package = "github.com/crescent-network/crescent/v3/x/liquidfarming/types";

// Query defines the gRPC querier service.
service Query {
  // Params returns parameters of the module
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/crescent/liquidfarming/v1beta1/params";
  }

  // LiquidFarms returns all liquid farms registered in params
  rpc LiquidFarms(QueryLiquidFarmsRequest) returns (QueryLiquidFarmsResponse) {
    option (google.api.http).get = "/crescent/liquidfarming/v1beta1/liquidfarms";
  }

  // LiquidFarm returns the specific liquid farm
  rpc LiquidFarm(QueryLiquidFarmRequest) returns (QueryLiquidFarmResponse) {
    option (google.api.http).get = "/crescent/liquidfarming/v1beta1/liquidfarms/{pool_id}";
  }

  // RewardsAuctions returns all rewards auctions that correspond to the given pool id
  rpc RewardsAuctions(QueryRewardsAuctionsRequest) returns (QueryRewardsAuctionsResponse) {
    option (google.api.http).get = "/crescent/liquidfarming/v1beta1/liquidfarms/{pool_id}/rewards_auctions";
  }

  // RewardsAuction returns the specific rewards auction
  rpc RewardsAuction(QueryRewardsAuctionRequest) returns (QueryRewardsAuctionResponse) {
    option (google.api.http).get =
        "/crescent/liquidfarming/v1beta1/liquidfarms/{pool_id}/rewards_auctions/{auction_id}";
  }

  // Bids returns all bids for the liquid farm
  rpc Bids(QueryBidsRequest) returns (QueryBidsResponse) {
    option (google.api.http).get = "/crescent/liquidfarming/v1beta1/liquidfarms/{pool_id}/bids";
  }

  // Rewards returns all accumulated farming rewards for the liquid farm
  rpc Rewards(QueryRewardsRequest) returns (QueryRewardsResponse) {
    option (google.api.http).get = "/crescent/liquidfarming/v1beta1/liquidfarms/{pool_id}/rewards";
  }

  // ExchangeRate returns exchange rates (mint rate and burn rate) for the liquid farm
  rpc ExchangeRate(QueryExchangeRateRequest) returns (QueryExchangeRateResponse) {
    option (google.api.http).get = "/crescent/liquidfarming/v1beta1/liquidfarms/{pool_id}/exchange_rate";
  }
}

// QueryLiquidFarmsRequest is the request type for the Query/LiquidFarms RPC method.
message QueryLiquidFarmsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryLiquidFarmsResponse is response type for the Query/LiquidFarms RPC method.
message QueryLiquidFarmsResponse {
  repeated LiquidFarmResponse liquid_farms = 1 [(gogoproto.nullable) = false];
}

// QueryLiquidFarmRequest is the request type for the Query/LiquidFarm RPC method.
message QueryLiquidFarmRequest {
  uint64 pool_id = 1;
}

// QueryLiquidFarmResponse is response type for the Query/LiquidFarm RPC method.
message QueryLiquidFarmResponse {
  LiquidFarmResponse liquid_farm = 1 [(gogoproto.nullable) = false];
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryRewardsAuctionsRequest is request type for the Query/RewardsAuctions RPC method.
message QueryRewardsAuctionsRequest {
  uint64                                pool_id    = 1;
  string                                status     = 2;
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

// QueryRewardsAuctionsResponse is response type for the Query/RewardsAuctions RPC method.
message QueryRewardsAuctionsResponse {
  repeated RewardsAuction                rewards_auctions = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination       = 2;
}

// QueryRewardsAuctionRequest is request type for the Query/RewardsAuction RPC method.
message QueryRewardsAuctionRequest {
  uint64 auction_id = 1;
  uint64 pool_id    = 2;
}

// QueryRewardsAuctionResponse is response type for the Query/RewardsAuction RPC method.
message QueryRewardsAuctionResponse {
  RewardsAuction rewards_auction = 1 [(gogoproto.nullable) = false];
}

// QueryBidsRequest is request type for the Query/Bids RPC method.
message QueryBidsRequest {
  uint64                                pool_id    = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryBidsResponse is response type for the Query/Bids RPC method.
message QueryBidsResponse {
  repeated Bid                           bids       = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryRewardsRequest is request type for the Query/Rewards RPC method.
message QueryRewardsRequest {
  uint64 pool_id = 1;
}

// QueryRewardsResponse is response type for the Query/Rewards RPC method.
message QueryRewardsResponse {
  repeated cosmos.base.v1beta1.Coin rewards = 1
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
}

// QueryExchangeRateRequest is request type for the Query/ExchangeRate RPC method.
message QueryExchangeRateRequest {
  uint64 pool_id = 1;
}

// QueryExchangeRateResponse is response type for the Query/ExchangeRate RPC method.
message QueryExchangeRateResponse {
  ExchangeRateResponse exchange_rate = 1 [(gogoproto.nullable) = false];
}

//
// Custom response messages
//

// LiquidFarmResponse is response type for the Query/LiquidFarm RPC method.
message LiquidFarmResponse {
  uint64 pool_id = 1;

  string liquid_farm_reserve_address = 2;

  string lf_coin_denom = 3 [(gogoproto.customname) = "LFCoinDenom"];

  string lf_coin_supply = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false,
    (gogoproto.customname) = "LFCoinSupply"
  ];

  string pool_coin_denom = 5;

  string pool_coin_farming_amount = 6
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];

  string min_farm_amount = 7
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];

  string min_bid_amount = 8
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

message ExchangeRateResponse {
  string mint_rate = 1
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];

  string burn_rate = 2
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}