syntax = "proto3";

package crescent.lpfarm.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package                      = "github.com/crescent-network/crescent/v4/x/lpfarm/types";
option (gogoproto.goproto_getters_all) = false;

message EventCreatePrivatePlan {
  string creator              = 1;
  uint64 plan_id              = 2;
  string farming_pool_address = 3;
}

message EventFarm {
  string                   farmer                     = 1;
  cosmos.base.v1beta1.Coin coin                       = 2 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin withdrawn_rewards = 3
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
}

message EventUnfarm {
  string                   farmer                     = 1;
  cosmos.base.v1beta1.Coin coin                       = 2 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin withdrawn_rewards = 3
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
}

message EventHarvest {
  string   farmer                                     = 1;
  string   denom                                      = 2;
  repeated cosmos.base.v1beta1.Coin withdrawn_rewards = 3
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
}

message EventTerminatePlan {
  uint64 plan_id = 1;
}
